# weather-tfl-pipeline

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
airflow/dags/: spark_transform_dag.py  tfl_ingestion_dag.py  weather_ingestion_dag.py
dbt/tfl_weather/: dbt_project.yml  profiles.yml
infrastructure/: s3_setup.py
ingestion/: tfl_client.py  weather_client.py
spark/: Dockerfile
spark/jobs/: bronze_to_silver_tfl.py  bronze_to_silver_weather.py
